tests/fixtures/invalid/non_char_array_string_initializer.c
int main(void) {
    int values[3] = "nope";
    return values[0];
}
